--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/back-end"],
+  "include": ["src", "back-end"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
